added option --jvm-options to add|update commands